# poker-trainer-react-rust

./: .eslintrc.json  .gitignore  README.md  debug_game.rs  package-lock.json  package.json  tailwind.config.js  test-rust-integration.js  tsconfig.app.json  tsconfig.json  vite.config.ts
backend/: Cargo.toml
backend/src/: bot.rs  main.rs  poker_engine.rs  table.rs
scripts/: dev-with-backend.js  dev.js  dev.ts
services/bot-python/: README.md  main.py  main_backup.py  main_fixed.py  requirements.txt
src/: App.css  App.tsx  index.css  main.tsx
src/components/: ActionFeed.tsx  CardDeck.tsx  ChipLegend.tsx  ChipStack.tsx  CollapsibleSidebar.tsx  Dealer.tsx  FlyingChips.tsx  GameControls.tsx  GameInfo.tsx  HandRankingCard.tsx  LogsModal.tsx  Navbar.tsx  PlayerSeat.tsx  PokerCard.tsx  PokerTable.tsx  SettingsModal.tsx  StatusBar.tsx  Toast.tsx
src/constants/: cards.ts  chips.ts
src/hooks/: useBotActions.ts  useChipAnimation.ts  useGameState.ts  useKeyboardShortcuts.ts  usePlayerActions.ts  useUIState.ts
src/lib/: botService.ts  deck.ts  gptBotService.ts  handEvaluator.ts  hotRefresh.ts  localBotService.ts  localPokerEngine.ts  localPokerService.ts  pokerService.ts  pythonBotService.ts  shuffle.ts  stateAdapter.ts  tableEngine.ts  tableEngineExports.ts
src/pages/: CardShuffler.tsx  MainMenu.tsx  Play.tsx  SoloTraining.tsx
src/types/: cards.ts  table.ts
src/utils/: chipUtils.ts
